--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -1,9 +1,9 @@
 set default=0
-set timeout=5
+set timeout=20
 
 insmod ext2
-set root=(hd0,2)
+set root=(hd0,msdos2)
 
 menuentry "Jauns Linukss" {
-	linux /boot/vmlinuz root=/dev/hda clock=pit ro
+	linux /vmlinuz root=/dev/hda clock=pit ro
 }
