finally boots properly

--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -5,5 +5,5 @@ insmod ext2
 set root=(hd0,msdos2)
 
 menuentry "Jauns Linukss" {
-	linux /vmlinuz root=/dev/hda clock=pit ro
+	linux /vmlinuz root=/dev/vda clock=pit ro
 }
