--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -1,9 +1,12 @@
 set default=0
 set timeout=20
 
+serial --unit=0 --speed=19200
+terminal_output console serial
+terminal_input console serial
 insmod ext2
 set root=(hd0,msdos2)
 
 menuentry "Jauns Linukss" {
-	linux /vmlinuz root=/dev/vda clock=pit ro
+	linux /vmlinuz root=/dev/vda2 clock=pit ro console=tty0 console=ttyS0,19200
 }
